2003-09-03  Gary Thomas  <gary@mlbassoc.com>

	* src/ecos/nanox_thread.c (nanox_thread): Fill in program
	name - also from Eric Doenges.

	* src/drivers/kbd_vnc_ecos.c (vnc_GetModifierInfo): 
	Protect against null [curmodifiers] pointer.  Reported
	by Eric Doenges <Eric.Doenges@DynaPel.com>

2003-09-01  Chris Garry <cgarry@sweeneydesign.co.uk>

    * src/ecos/ecos_app.c:
    * src/ecos/ecos_init.c:
    Do not use ARM display hardware setup routines when VNC server
    drivers are used.

2003-09-01  Gary Thomas  <gary@mlbassoc.com>

	* src/nanox/client.c: 
	* src/mwin/wingdi.c: 
	* src/engine/devopen.c: 
	* src/engine/devfont.caching.c: 
	* src/engine/devfont.c: 
	* src/engine/devdraw.c: 
	* src/drivers/scr_vnc_ecos.c: 
	* src/demos/nanox/ntetris.c: 
	* src/Configs/config.ecos: 
	* include/microwin/mwtypes.h: 
	* include/microwin/device.h: Support BGR233 mode which is used by
	the VNC server.

2003-08-30  Gary Thomas  <gary@mlbassoc.com>

	* src/ecos/world_thread.c: 
	* src/ecos/ntetris_thread.c: 
	* src/ecos/nanox_thread.c: 
	* src/ecos/nanowm_thread.c: 
	* src/ecos/ecos_app.c: Use tables to define threads within
	the actual application.

	* src/demos/nanox/ntetris.h: 
	* src/demos/nanox/ntetris.c: Adapt to eCos threaded environment.

	* include/microwin/ecos_mw_app.h: New file - define table
	driven API for plug-in MicroWindows applications under eCos.

	* cdl/microwindows.cdl: Add support for building complete
	application via CDL.  Also better selection of demos to run.

2003-08-22  Chris Garry <cgarry@sweeneydesign.co.uk>

    * cdl/microwindows.cdl
    Added support for VNC server.
    
    * src/include/device.h:
    Remove COLOR2PIXEL555 hack for strongarm lcd when VNC server screen
    driver is used.
    
    * src/nanox/clientfb.c:
    Removed assumption that CYGPKG_HAL_ARM means target is a strongarm
    lcd when VNC server is used.
    
    * src/drivers/kbd_vnc_ecos.c:
    * src/drivers/mou_vnc_ecos.c:
    * src/drivers/scr_vnc_ecos.c: